# Pythonproject4

./: README.md  main.py  pyproject.toml
src/: __init__.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
